# chilbolton-pressure-utils

./: .gitignore  CHANGELOG.md  INSTALL.md  MANIFEST.in  README.md  process_stfc_date.sh  process_stfc_today.sh  process_stfc_today_yesterday.sh  process_stfc_yesterday.sh  pyproject.toml  slurm_process_2015_2020_f5.sh  slurm_process_2019_2024_main.sh  slurm_process_2020_2024_main.sh  slurm_process_2024_2025_stfc.sh  slurm_process_2024_2026_stfc.sh  slurm_process_stfc_month.sh  slurm_quicklooks_2015_2020.sh  slurm_quicklooks_2019_2024.sh  slurm_quicklooks_2019_2026.sh  slurm_quicklooks_2020_2025.sh
chilbolton_pressure_utils/: __init__.py  apply_bad_data_indices.py  apply_corr_files.py  extract_bad_data_indices.py  make_quicklooks.py  metadata.json  metadata_f5.json  metadata_stfc.json  proc_month.py  proc_month_f5.py  proc_month_stfc.py  proc_year.py  proc_year_f5.py  proc_year_stfc.py  process_ptb110.py  process_ptb110_f5.py  process_ptb110_stfc.py  qc_corrections.py  qc_flask_tool.py  qc_web_tool.py  read_format5_content.py  split_cr1000x_data_daily.py  update_amf_cvs.py
chilbolton_pressure_utils/amf_cvs/: versions.txt
chilbolton_pressure_utils/amf_cvs/v2.2.0/product-definitions/tsv/_common/: global-attributes.tsv  variables-air.tsv  variables-sea.tsv
chilbolton_pressure_utils/amf_cvs/v2.2.0/product-definitions/tsv/_vocabularies/: data-products.tsv  file-naming.tsv
chilbolton_pressure_utils/amf_cvs/v2.2.0/product-definitions/tsv/surface-met/: variables-specific.tsv
docs/: api.rst  conf.py  index.rst
