[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chilbolton-pressure-utils"
version = "1.0.0"
description = "Processing utilities for Chilbolton barometric pressure sensor data"
readme = "README.md"
authors = [{name = "Chris Walden"}]
maintainers = [{name = "Chris Walden"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "polars>=0.19.0",
    "pandas>=2.0.0",
    "xarray>=2023.1.0",
    "netCDF4>=1.6.0",
    "matplotlib>=3.7.0",
    "cftime>=1.6.0",
    "ncas-amof-netcdf-template>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "flake8>=6.0", "mypy>=1.0"]
docs = ["sphinx>=4.0", "sphinx_rtd_theme>=1.0"]

[project.urls]
Homepage = "https://github.com/longlostjames/chilbolton-pressure-utils"
Documentation = "https://chilbolton-pressure-utils.readthedocs.io"
Repository = "https://github.com/longlostjames/chilbolton-pressure-utils"
Issues = "https://github.com/longlostjames/chilbolton-pressure-utils/issues"

[project.scripts]
process-ptb110 = "chilbolton_pressure_utils.process_ptb110:main"
process-ptb110-f5 = "chilbolton_pressure_utils.process_ptb110_f5:main"
process-ptb110-stfc = "chilbolton_pressure_utils.process_ptb110_stfc:main"
process-ptb110-year = "chilbolton_pressure_utils.proc_year:main"
process-ptb110-year-f5 = "chilbolton_pressure_utils.proc_year_f5:main"
process-ptb110-year-stfc = "chilbolton_pressure_utils.proc_year_stfc:main"
process-ptb110-month = "chilbolton_pressure_utils.proc_month:main"
process-ptb110-month-f5 = "chilbolton_pressure_utils.proc_month_f5:main"
process-ptb110-month-stfc = "chilbolton_pressure_utils.proc_month_stfc:main"
split-cr1000x-data-daily = "chilbolton_pressure_utils.split_cr1000x_data_daily:main"
make-ptb110-quicklooks = "chilbolton_pressure_utils.make_quicklooks:main"
extract-ptb110-bad-data-indices = "chilbolton_pressure_utils.extract_bad_data_indices:main"
apply-ptb110-bad-data-indices = "chilbolton_pressure_utils.apply_bad_data_indices:main"

[tool.setuptools]
packages = ["chilbolton_pressure_utils"]

[tool.setuptools.package-data]
chilbolton_pressure_utils = ["*.json", "*.chdb", "*.sh"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
